# TrimTank

./: .gitignore  .gitmessage  LICENSE  README.md  pyproject.toml
docs/: DEVELOPMENT.md
src/trimtank/: __init__.py  __main__.py  cli.py  projects.py  server.py
src/trimtank/static/css/: app.css
src/trimtank/static/js/: api.js  app.js  image-review.js  project-picker.js  training-handoff.js  training-prep.js  training-review.js
src/trimtank/templates/: base.html  index.html  review.html  train.html
tests/: test_training_prepare.py
