[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trimtank"
dynamic = ["version"]
description = "Local-first image dataset preparation tool for LoRA training workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Pacific Wharf" },
]
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "Pillow>=10.0",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
trimtank = "trimtank.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "trimtank.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trimtank = [
    "templates/*.html",
    "static/css/*.css",
    "static/js/*.js",
]
